# toprs

./: Cargo.toml  README.md  build.rs
src/: config.rs  gui.rs  helpers.rs  index.html  macro.rs  main.rs  manager.rs  mynetwork.rs  myprocess.rs  sorted.rs  svgmaker.rs  tui.rs
