[package]
name = "toprs"
version = "0.5.0"
edition = "2024"
description = "Cross platform memory focused top"
repository = "https://github.com/griccardos/toprs/"
readme = "README.md"
keywords = ["top", "memory", "cpu", "usage"]
categories = ["command-line-utilities", "visualization"]
license = "MIT"

[features]
default = ["gui"]
gui = ["dep:dioxus", "dep:dioxus-desktop"]

[dependencies]
crossterm = "0.29"
dioxus = { version = "0.7.2", optional = true }         #gui
dioxus-desktop = { version = "0.7.2", optional = true } #gui
formato = "0.3.0"                                       #format numbers
gumdrop = "0.8.1"                                       #arguments
sysinfo = "0.37"                                        #get system info
tokio = { version = "1", features = ["time"] }          #sleep
ratatui = "0"                                           #console tui
dirs = "6"                                              #for load config from home
toml = "0.9"                                            #for config
serde = { version = "1.0", features = ["derive"] }      #for config
image = "0.25"                                          #for icon

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }

[build-dependencies]
embed-resource = "3.0" #for icon
