[package]
name = "toprs"
version = "0.6.3"
edition = "2024"
description = "Cross platform memory focused top"
repository = "https://github.com/griccardos/toprs/"
readme = "README.md"
keywords = ["monitoring", "process", "top", "memory", "performance"]
categories = ["command-line-utilities", "visualization"]
license = "MIT"
authors = ["https://github.com/griccardos"]

[features]
default = ["gui"]
gui = ["dep:dioxus", "dep:dioxus-desktop", "dep:image", "dep:tokio"]

[dependencies]
crossterm = "0.29"
formato = "0.3.0"                                  #format numbers
gumdrop = "0.8.1"                                  #arguments
sysinfo = "0.38"                                   #get system info
ratatui = "0.30"                                   #console tui
dirs = "6"                                         #for load config from home
toml = "0.9"                                       #for config
serde = { version = "1.0", features = ["derive"] } #for config
#gui
dioxus = { version = "0.7.3", optional = true }                 #gui
dioxus-desktop = { version = "0.7.3", optional = true }         #gui
image = { version = "0.25", optional = true }                   #for icon
tokio = { version = "1", features = ["time"], optional = true } #sleep
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }

[build-dependencies]
embed-resource = "3.0" #for icon
